# model-optimization-level3-nlp-13

./: .gitignore  auto_find.py  code_eda.ipynb  eda_quantized.ipynb  inference.py  inference.sh  model_list.txt  output.csv  pyproject.toml  requirements.txt  requirements3.txt  test.ipynb  train.py  train.sh
.ipynb_checkpoints/: output-checkpoint.csv
configs/data/: taco.yaml
quantization/: train_q.py  train_quantization.py  utils.py
src/: dataloader.py  trainer.py
