[tool.poetry]
name = "lv3-clue-optimization"
version = "0.1.0"
description = "Optimization with CV model"
authors = ["Team-CLUE"]

[tool.poetry.dependencies]
python = "^3.7"
torch = "^1.10.0"
wandb = "^0.12.7"
scikit-learn = "^1.0.1"
tqdm = "^4.62.3"
torchvision = "^0.11.1"
timm = "^0.4.12"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
