[tool.poetry]
name = "model-optimization-level3-nlp-13"
version = "0.1.0"
description = ""
authors = ["KyungHyunLim <lkh1075@yonsei.ac.kr>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
